# lingaligner

./: LICENSE  README.md  pyproject.toml
temp/: PLAN.md
